--- a/backup-wordpress-website-using-updraftplus.html
+++ b/backup-wordpress-website-using-updraftplus.html
@@ -30,7 +30,7 @@
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="How to Backup Your WordPress Site with UpdraftPlus | Sybiltec" />
-        <meta property="og:description" content="If you are an SME or sole trader based in Bexley, you may be eligible to receive free business support. Register now for the Talking Business programme." />
+        <meta property="og:description" content="Regularly backing up your WordPress site is an essential website maintenance activity. Read this article to learn how to use the UpdraftPlus plugin for making a backup." />
         <meta property="og:url" content="https://sybiltec.com/backup-wordpress-website-using-updraftplus" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/external-hard-drive-with-brushed-stainless-steel-case-350x183.jpg" />
