--- a/backup-wordpress-website-using-updraftplus.html
+++ b/backup-wordpress-website-using-updraftplus.html
@@ -100,7 +100,7 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <p>Date published: 19 December 2023</p>
+                <p>Date published: 19 December 2023 | Date updated: 20 December 2023</p>
                 <h2>Why Should You Backup Your Website?</h2>
 
                 <p>Ask yourself a question: when was the last time you <strong>backed up your WordPress website</strong>? Hopefully the answer is not “three years ago”, or worse still, “never”!</p>
@@ -155,6 +155,8 @@
                 <h2>Conclusion</h2>
 
                 <p>Backing up your website is an important aspect of your website maintenance activities. It's likely that you'll have spent a great deal of time and money on developing your website, so it's vital to have a copy of your website's content in case of loss of data. In this article we discussed the processing for backing up your website on WordPress using the UpdraftPlus plugin.</p>
+
+                <p>If you need help with backing up your WordPress website, feel free to <a href="https://sybiltec.com/contact">contact me</a>.</p>
 
             </div>
         </div>
