--- a/blog.html
+++ b/blog.html
@@ -78,20 +78,27 @@
         <div class="hero center">
             <div class="container-1140">
                 <h1>Sybiltec's Blog</h1>
-                <h4>Keeping You Updated</h4>               
+                <h4>Keeping You Updated</h4>
             </div>
         </div>
         <div class="main section">
             <div class="container-1140">
+                <h2>How to Improve the SEO of Your Website</h2>
+                    <p>One of the most effective ways to increase traffic to your website is through search, so after you've launched your website, the next step is to work on the SEO (search engine optimisation) of your site, helping it to rank in the highest possible position in search engine results pages (SERPs). …</p>
+                    <br>
+                    <a class="btn-primary" href="https://sybiltec.com/improve-website-seo">Improve My SEO</a>
+                <div class="padding-top">
                     <h2>How to Backup Your WordPress Website with UpdraftPlus</h2>
-                    <p>Ask yourself a question: when was the last time you backed up your WordPress website? Hopefully the answer is not “three years ago”, or worse still, “never”! Imagine spending weeks or months on building your website, only to lose all the results of your hard work forever 😭 …</p>
+                    <p>Ask yourself a question: when was the last time you backed up your WordPress website? Hopefully the answer is not "three years ago", or worse still, "never"! Imagine spending weeks or months on building your website, only to lose all the results of your hard work forever 😭 …</p>
                     <br>
                     <a class="btn-primary" href="https://sybiltec.com/backup-wordpress-website-using-updraftplus">Backup Your Website</a>
+                </div>
                 <div class="padding-top">
                     <h2>Bexley Talking Business</h2>
                     <p>Are you an SME or sole trader based in Bexley? Do you need help with running your business? If so, you may be eligible for free business support. Register now for the programme …</p>
                     <br>
                     <a class="btn-primary" href="https://sybiltec.com/bexley-talking-business">Get Business Support</a>
+                </div>
                 <div class="padding-top">
                     <h2>10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)</h2>
                     <p>A fast loading WordPress site is essential for good user experience and SEO. In this blog post we discuss 10 steps you can take to maximise your site's speed. …</p>
