--- a/index.html
+++ b/index.html
@@ -330,6 +330,20 @@
                     <p>Read my latest blog posts.</p>
                 </div>
                 <div class="row">
+                    <div class="col-4">
+                        <div class="blog-card">   
+                            <a href="https://sybiltec.com/improve-websites-seo"><img src="images/google-search-console-350x183.jpg" 
+                                alt="Google Search Console"></a>     
+                            <div class="blog-card-text">           
+                                <h3>How to Improve Your Website's SEO</h3>
+                                <p>26 December 2023</p>
+                                <p>Want to know how to gain more traffic through search? Read this article for 11 ways to improve your website's SEO (search engine optimisation).</p>
+                                <div class="padding-bottom padding-top">
+                                    <a class="btn-primary" href="https://sybiltec.com/improve-websites-seo">Improve My SEO</a>   
+                                </div>
+                            </div>
+                        </div> 
+                    </div>
                     <div class="col-4">          
                         <div class="blog-card">  
                             <a href="https://sybiltec.com/backup-wordpress-website-using-updraftplus"><img src="images/external-hard-drive-with-brushed-stainless-steel-case-350x183.jpg" 
@@ -358,20 +372,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="blog-card">   
-                            <a href="https://sybiltec.com/fix-slow-wordpress-website"><img src="https://sybiltec.com/images/mr-bean-waiting-350x183.png" 
-                                alt="Mr Bean waiting"></a>     
-                            <div class="blog-card-text">           
-                                <h3>10 Reasons Why Your WordPress Website is Slow</h3>
-                                <p>08 December 2023</p>
-                                <p>In this article we discuss reasons why your WordPress website may be experiencing poor performance, and how to fix the issues.</p>
-                                <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/fix-slow-wordpress-website">Fix My Site!</a>   
-                                </div>
-                            </div>
-                        </div> 
                     </div>
                 </div>
             </div>
