Remove inline CSS

--- a/improve-website-seo.html
+++ b/improve-website-seo.html
@@ -134,7 +134,7 @@
 
                 <p>You'll want to look for keywords with a reasonable amount of search volume and low competition. From the screenshot below, I may want to choose "web design bexley" or "seo bexley". "Web design" is a very broad term and if I tried to target this keyword I'd be competing with hundreds or thousands of other web design sites!</p>
 
-                <img class="screenshot" src="images/screenshots/google-keyword-planner-average-monthly-searches.png" alt="Screenshot of the Google Keyword Planner, illustrating average monthly searches">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/google-keyword-planner-average-monthly-searches.png" alt="Screenshot of the Google Keyword Planner, illustrating average monthly searches">
 
                 <p>When you have selected the best keywords to target, start planning the content you will write for each one. The rule is one keyword per page.</p>
 
@@ -149,7 +149,7 @@
 
                 <p>So, what is a page title and meta description? Firstly, let's analyse an example. This is how my Web Design page appears in the Google search results:</p>
 
-                <img class="screenshot" src="images/screenshots/search-engine-result-google-page-title-meta-description.png" alt="Screenshot of a search engine result for Sybiltec website design on Google illustration page title and meta description">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/search-engine-result-google-page-title-meta-description.png" alt="Screenshot of a search engine result for Sybiltec website design on Google illustration page title and meta description">
 
                 <p>The first line, in blue, is known as the <em>page title</em>. This is also what is displayed on the browser tab when you visit the web page.</p>
 
@@ -243,7 +243,7 @@
 
                 <p>When you run the tool, it will scan your website and provide you with a list of issues, grouped by category, with guidance on how to fix them.</p>
 
-                <img class="screenshot" src="images/screenshots/sitechecker-dashboard.png" alt="Screenshot of Sitechecker dashboard with site audit, site monitoring, rank tracker, Google Search Console and Google Analytics">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/sitechecker-dashboard.png" alt="Screenshot of Sitechecker dashboard with site audit, site monitoring, rank tracker, Google Search Console and Google Analytics">
 
                 <h2>10. Fix Duplicate Content</h2>
 
