--- a/install-ga4-shopify-website.html
+++ b/install-ga4-shopify-website.html
@@ -107,31 +107,31 @@
 
                 <p>Firstly, find your Google Analytics measurement ID. This can be found from the <strong>Web stream</strong> details page in your Google Analytics account.</p>
 
-                <img src="images/screenshots/google-analytics-web-stream-details.png" alt="Google Analytics web stream details" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/google-analytics-web-stream-details.png" alt="Google Analytics web stream details">
 
                 <p>From your Shopify admin, go to <strong>Online Store</strong> > <strong>Preferences</strong>.</p>
 
-                <img src="images/screenshots/shopify-online-store-preferences.png" alt="Shopify online store preferences" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/shopify-online-store-preferences.png" alt="Shopify online store preferences">
 
                 <p>Scroll down to the <strong>Google Analytics</strong> section and click <strong>Manage pixel here</strong>.</p>
 
-                <img src="images/screenshots/shopify-manage-pixel-here.png" alt="Shopify Google Analytics manage pixel here" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/shopify-manage-pixel-here.png" alt="Shopify Google Analytics manage pixel here">
 
                 <p>Click <strong>Add sales channel</strong>.</p>
 
-                <img src="images/screenshots/shopify-add-google-and-youtube.png" alt="Shopify add Google & YouTube sales channel" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/shopify-add-google-and-youtube.png" alt="Shopify add Google & YouTube sales channel">
 
                 <p>Select the Google account that owns your GA4 property.</p>
 
-                <img src="images/screenshots/shopify-google-channel.png" alt="Choose an account to continue to Google Channel by Shopify" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/shopify-google-channel.png" alt="Choose an account to continue to Google Channel by Shopify">
 
                 <p>Click <strong>Allow</strong>.</p>
 
-                <img src="images/screenshots/shopify-trust-google-channel.png" alt="Shopify trust Google Channel" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/shopify-trust-google-channel.png" alt="Shopify trust Google Channel">
 
                 <p>In the <strong>Connect a Google Analytics property</strong> section, select the GA4 property from the dropdown and click the <strong>Connect</strong> button.</p>
 
-                <img src="images/screenshots/shopify-connect-google-analytics-property.png" alt="Shopify connect a Google Analytics property" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/shopify-connect-google-analytics-property.png" alt="Shopify connect a Google Analytics property">
 
             </div>
         </div>
