--- a/install-ga4-wix-website.html
+++ b/install-ga4-wix-website.html
@@ -107,29 +107,29 @@
 
                 <p>Firstly, find your Google Analytics measurement ID. This can be found from the <strong>Web stream</strong> details page in your Google Analytics account.</p>
 
-                <img src="images/screenshots/google-analytics-web-stream-details.png" alt="Google Analytics web stream details" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/google-analytics-web-stream-details.png" alt="Google Analytics web stream details">
 
                 <p>Log into your Wix website. In the search bar, type <em>Google Analytics</em> and click the <strong>Marketing Integrations</strong> result from the dropdown.</p>
 
-                <img src="images/screenshots/wix-search-bar-google-analytics.png" alt="Wix search bar google analytics" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/wix-search-bar-google-analytics.png" alt="Wix search bar google analytics">
 
                 <p>On the <strong>Marketing Integrations</strong> page, in the Google Analytics box, click on the <strong>Connect</strong> or <strong>View</strong> button.</p>
 
-                <img src="images/screenshots/wix-google-analytics-connect.png" alt="Wix connectGoogle Analytics" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/wix-google-analytics-connect.png" alt="Wix connectGoogle Analytics">
                 <br>
-                <img src="images/screenshots/wix-google-analytics-view.png" alt="Wix view Google Analytics" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/wix-google-analytics-view.png" alt="Wix view Google Analytics">
 
                 <p>If you don't have GA connected already, click the <strong>Add Google Analytics ID</strong> button.</p>
 
-                <img src="images/screenshots/wix-add-google-analytics-id.png" alt="Wix add Google Analytics ID" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/wix-add-google-analytics-id.png" alt="Wix add Google Analytics ID">
 
                 <p>Otherwise, if GA is connected already, click the three dots in the top right-hand corner and click <strong>Edit</strong>.</p>
 
-                <img src="images/screenshots/wix-google-analytics-edit.png" alt="Wix edit Google Analytics" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/wix-google-analytics-edit.png" alt="Wix edit Google Analytics">
 
                 <p>Enter your measurement ID in the box, and click the <strong>Save</strong> button.</p>
 
-                <img src="images/screenshots/wix-add-your-google-analytics-code.png" alt="Wix add your Google Analytics code" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/wix-add-your-google-analytics-code.png" alt="Wix add your Google Analytics code">
             </div>
         </div>
         <div class="contact section">
