--- a/install-ga4-wordpress-website.html
+++ b/install-ga4-wordpress-website.html
@@ -107,7 +107,7 @@
 
                 <p>Firstly, find your Google Analytics measurement ID. This can be found from the <strong>Web stream</strong> details page in your Google Analytics account.</p>
 
-                <img src="images/screenshots/google-analytics-web-stream-details.png" alt="Google Analytics web stream details" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/google-analytics-web-stream-details.png" alt="Google Analytics web stream details">
 
                 <p>Log into your WordPress admin.</p>
 
@@ -115,31 +115,31 @@
 
                 <p>Click <strong>Install Now</strong>, and then activate the plugin.</p>
 
-                <img src="images/screenshots/wordpress-monsterinsights-install-now.png" alt="Install MonsterInsights" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/wordpress-monsterinsights-install-now.png" alt="Install MonsterInsights">
 
                 <p>Click the <strong>Launch the Wizard!</strong> button.</p>
 
-                <img src="images/screenshots/getting-started-with-monsterinsights.png" alt="Getting Started With MonsterInsights" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/getting-started-with-monsterinsights.png" alt="Getting Started With MonsterInsights">
 
                 <p>Select the type of website, and click <strong>Save and Continue</strong>.</p>
 
-                <img src="images/screenshots/welcome-to-monsterinsights.png" alt="Welcome to MonsterInsights!" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/welcome-to-monsterinsights.png" alt="Welcome to MonsterInsights!">
 
                 <p>Click <strong>Connect MonsterInsights</strong>.</p>
 
-                <img src="images/screenshots/connect-monsterinsights-to-your-website.png" alt="Connect MonsterInsights to your website" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/connect-monsterinsights-to-your-website.png" alt="Connect MonsterInsights to your website">
 
                 <p>Select the Google account that owns your GA4 property.</p>
 
-                <img src="images/screenshots/continue-to-monsterinsights.png" alt="Continue to MonsterInsights" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/continue-to-monsterinsights.png" alt="Continue to MonsterInsights">
 
                 <p>Click <strong>Allow</strong>.</p>
 
-                <img src="images/screenshots/trust-monsterinsights.png" alt="Trust MonsterInsights" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/trust-monsterinsights.png" alt="Trust MonsterInsights">
 
                 <p>Select your GA4 property from the dropdown and click <strong>Complete Connection</strong>.</p>
 
-                <img src="images/screenshots/monsterinsights-pick-a-profile.png" alt="MonsterInsights pick a profile" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/monsterinsights-pick-a-profile.png" alt="MonsterInsights pick a profile">
             </div>
         </div>
         <div class="contact section">
