--- a/upgrade-google-analytics-4.html
+++ b/upgrade-google-analytics-4.html
@@ -106,54 +106,54 @@
 
                 <p>Not sure which version of Google Analytics you are using? Sign into <a href="https://analytics.google.com/" target="_blank" rel="noopener noreferrer">https://analytics.google.com/</a> with your Gmail account. In the top left-hand corner click the menu (to the right of the Analytics logo):</p>
 
-                <img src="images/screenshots/google-analytics-1.png" alt="Google Analytics homepage" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/google-analytics-1.png" alt="Google Analytics homepage">
 
                 <p>The menu will open. Check the Properties & Apps column. The property IDs are displayed below each property. If the ID begins with UA, then it is a Universal Analytics property. Otherwise, it is a GA4 property.</p>
 
-                <img src="images/screenshots/google-analytics-2.png" alt="Google Analytics Properties & Apps" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/google-analytics-2.png" alt="Google Analytics Properties & Apps">
 
                 <h2>How to Create a GA4 Property</h2>
 
                 <p>In the bottom left-hand corner, click the Admin icon.</p>
-                <img src="images/screenshots/google-analytics-admin.png" alt="Google Analytics Admin" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/google-analytics-admin.png" alt="Google Analytics Admin">
 
                 <p>Click the blue Create Property button.</p>
 
-                <img src="images/screenshots/google-analytics-create-property.png" alt="Google Analytics property management" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/google-analytics-create-property.png" alt="Google Analytics property management">
 
                 <p>Enter a meaningful name for your property, and select the time zone and the currency. Then click Next. </p>
 
-                <img src="images/screenshots/google-analytics-create-property-2.png" alt="Google Analytics create a property" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/google-analytics-create-property-2.png" alt="Google Analytics create a property">
 
                 <p>Select the industry category and the business size. Click Next.</p>
 
-                <img src="images/screenshots/google-analytics-describe-your-business.png" alt="Google Analytics describe your business" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/google-analytics-describe-your-business.png" alt="Google Analytics describe your business">
 
                 <p>On this page, choose one or more business objectives. Then click Create.</p>
 
-                <img src="images/screenshots/google-analytics-choose-your-business-objectives.png" alt="Google Analytics choose your business objectives" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/google-analytics-choose-your-business-objectives.png" alt="Google Analytics choose your business objectives">
 
                 <p>Choose the platform that you would like to collect data for (Web):</p>
 
-                <img src="images/screenshots/google-analytics-start-collecting-data.png" alt="Google Analytics start collecting data" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/google-analytics-start-collecting-data.png" alt="Google Analytics start collecting data">
 
                 <p>Enter your website's URL, and enter a stream name. Click Create stream.</p>
 
-                <img src="images/screenshots/google-analytics-set-up-data-stream.png" alt="Google Analytics set up data stream" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/google-analytics-set-up-data-stream.png" alt="Google Analytics set up data stream">
 
                 <h2>How to Install the Tracking Code on Your Website</h2>
 
                 <p>You will be presented with the installation instructions.</p> 
 
-                <img src="images/screenshots/google-analytics-installation-instructions.png" alt="Google Analytics installation instructions" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/google-analytics-installation-instructions.png" alt="Google Analytics installation instructions">
 
                 <p>Google can attempt to automatically detect your website's platform if you click the Scan button. If that does not work, you can select one of the platforms listed at the bottom. For example, if you have a Wix website, click the Wix button. Then if you scroll down, you will see the instructions for installing the analytics code on your Wix website.</p>
 
-                <img src="images/screenshots/google-analytics-website-platform.png" alt="Google Analytics website platform" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/google-analytics-website-platform.png" alt="Google Analytics website platform">
 
                 <p>If your platform is not listed, you can click the Install manually tab. This will show you the tracking code - copy this code and paste it into every page of your website, immediately after the <strong>head</strong> tag. </p>
 
-                <img src="images/screenshots/google-analytics-install-manually.png" alt="Google Analytics install manually" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/google-analytics-install-manually.png" alt="Google Analytics install manually">
 
                 <h3>Need More Help?</h3>
                 <p>Check out my articles below which explain in more detail how to install GA4 on the most popular website builders:</p>
@@ -169,7 +169,7 @@
 
                 <p>In Google Analytics, return to the homepage. Observe the Users in Last 30 Minutes report. After a few minutes, you should see some data showing up in this report. If not, double-check that you have installed the tracking code correctly.</p>
 
-                <img src="images/screenshots/google-analytics-users-in-last-30-minutes.png" alt="Google Analytics users in last 30 minutes" style="max-width: 100%;">
+                <img class="screenshot" src="images/screenshots/google-analytics-users-in-last-30-minutes.png" alt="Google Analytics users in last 30 minutes">
             </div>
         </div>
         <div class="contact section">
