--- a/cyber-security-best-practices-for-business.html
+++ b/cyber-security-best-practices-for-business.html
@@ -48,7 +48,7 @@
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <link rel="canonical" href="https://sybiltec.com/cyber-security-best-practices-for-business" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
-        <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png" style="width: 500px; max-width: 100%;">    
+        <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
         <div class="header">
