--- a/website-development.html
+++ b/website-development.html
@@ -29,7 +29,7 @@
         <meta name="twitter:label1" content="Written by">
         <meta name="twitter:data1" content="Sybil Mayard">
         <meta name="twitter:label2" content="Estimated reading time">
-        <meta name="twitter:data2" content="2 minutes">
+        <meta name="twitter:data2" content="5 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
@@ -78,32 +78,26 @@
         <div class="hero center">
             <div class="container-1140">
                 <h1>Website Development</h1>
-                <h4>One-off Services For Your Existing Website</h4>
+                <!-- <h4>One-off Services For Your Existing Website</h4> -->
             </div>
         </div>
         <div class="main section">
             <div class="container-1140 padding-top padding-bottom">
                 <p>Whether you are taking your business online for the first time, or you require work carried out on your existing website, I can help you achieve your goals.</p>
                 <h2>Full Website</h2>
-                <p>Your requirements will be gathered and we will work together to develop your new website. It will be set up on the most appropriate platform (<a href="https://www.wix.com/" 
-                    target="_blank" rel="noopener noreferrer">Wix</a>, <a href="https://wordpress.org/" target="_blank" 
-                    rel="noopener noreferrer">WordPress</a> or
-                    <a href="https://www.shopify.co.uk/" target="_blank" rel="noopener noreferrer">
-                        Shopify</a>) according to your requirements. 
+                <p>Your requirements will be gathered and we will work together to develop your new website. It will be set up on the most appropriate platform (Wix, WordPress or Shopify) according to your requirements. 
                         Your website will be professional, easy to maintain and responsive across a range of devices.</p>
                 
-                <p>Your site will be verified with <a href="https://search.google.com/search-console/about" target="_blank" 
-                    rel="noopener noreferrer">Google Search Console</a> to monitor its performance in search. All SEO techniques used comply with <a href="https://developers.google.com/search/docs/essentials" target="_blank" 
-                    rel="noopener noreferrer">Google Search Essentials</a> (formerly Webmaster Guidelines). I can also help you to set up <a href="https://analytics.google.com/" target="_blank" rel="noopener noreferrer">Google Analytics</a> to track important metrics.</p>
+                <p>Your site will be verified with Google Search Console to monitor its performance in search. All SEO techniques used comply with Google Search Essentials (formerly Webmaster Guidelines). I can also help you to set up Google Analytics to track important metrics.</p>
                 
                 <p>Guidance can be provided so you will be confident in using your new platform once it has launched. This can be in the form of a live demonstration on Zoom, or written instructions.</p>
 
                 <h2>One-Off Tasks</h2>
                 <p>This service is for any ad-hoc tasks that need doing. Here are some recent examples of how I have helped clients:</p>
                 <ul>
-                    <li>Setting up Acuity scheduling for a <a href="https://www.findthebalance.co.uk/" target="_blank" rel="noopener noreferrer">yoga practice</a></li>
-                    <li>Adding colour swatches to product pages on a <a href="https://thebamboowardrobe.com/" target="_blank" rel="noopener noreferrer">Shopify store</a></li>
-                    <li>Creating a members' area on a <a href="https://future-communities.org.uk/" target="_blank" rel="noopener noreferrer">WordPress site</a> to restrict access to resources to authorised users only</li>
+                    <li>Setting up Acuity scheduling for a yoga practice</li>
+                    <li>Adding colour swatches to product pages on a Shopify store</li>
+                    <li>Creating a members' area on a WordPress site to restrict access to resources to authorised users only</li>
                 </ul>
 
                 <h2 class="padding-top">Website Development Clients</h2>
@@ -207,11 +201,7 @@
                             <li>New customer email notifications</li>
                             <li>New customer application form</li>
                             <li>Google Search Console submission</li>
-                        </ul>  
-                        <div class="padding-btn">
-                            <a class ="btn-secondary" href="https://thebamboowardrobe.com"
-                            target="_blank" rel="noopener noreferrer">View Client</a>
-                        </div>
+                        </ul>
                     </div>
                 </div>
             </div>
