Fix broken link on homepage

--- a/index.html
+++ b/index.html
@@ -332,14 +332,14 @@
                 <div class="row">
                     <div class="col-4">
                         <div class="blog-card">   
-                            <a href="https://sybiltec.com/improve-websites-seo"><img src="images/google-search-console-350x183.jpg" 
+                            <a href="https://sybiltec.com/improve-website-seo"><img src="images/google-search-console-350x183.jpg" 
                                 alt="Google Search Console"></a>     
                             <div class="blog-card-text">           
                                 <h3>How to Improve Your Website's SEO</h3>
                                 <p>26 December 2023</p>
                                 <p>Want to know how to gain more traffic through search? Read this article for 11 ways to improve your website's SEO (search engine optimisation).</p>
                                 <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/improve-websites-seo">Improve My SEO</a>   
+                                    <a class="btn-primary" href="https://sybiltec.com/improve-website-seo">Improve My SEO</a>   
                                 </div>
                             </div>
                         </div> 
