Add services links to the footer

--- a/shopify-woocommerce.html
+++ b/shopify-woocommerce.html
@@ -168,7 +168,16 @@
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
                         <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
                     </div>
-                    <div class="col-5">
+                    <div class="col-3">
+                        <h4>Services</h4>
+                        <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
+                        <p><a href="https://sybiltec.com/website-design">Web Design</a></p>
+                        <p><a href="https://sybiltec.com/website-development">Web Development</a></p>
+                        <p><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></p>
+                        <p><a href="https://sybiltec.com/training">Training</a></p>
+                        <p><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></p>
+                    </div>
+                    <div class="col-3">
                         <div class="ml-form-embed"
                             data-account="2216689:x9i7o3w7n4"
                             data-form="5270027:e5c2j0">
@@ -176,7 +185,7 @@
                         <h4>Address</h4>
                         <p>The Engine House Bexley,<br>2 Veridion Way,<br>Erith DA18 4AL</p>
                     </div>
-                    <div class="col-4">
+                    <div class="col-3">
                         <h4>Get in Touch</h4>
                         <p>
                             <a href="https://sybiltec.com/contact"><i class="far fa-envelope"></i></a>
