--- a/blog-2.html
+++ b/blog-2.html
@@ -12,15 +12,15 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Blog | Web Designer Erith Bexley South East London | Sybiltec</title>       
+        <title>Blog Page 2 | Web Designer Erith Bexley South East London</title>       
         <meta name="Description" content="Sybiltec provides website development and e-commerce services for SMEs. Read my blog posts to learn about the latest industry news and company updates.">
         <meta name="robots" content="all">
-        <link rel="canonical" href="https://sybiltec.com/blog">
+        <link rel="canonical" href="https://sybiltec.com/blog-2">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Blog | Web Designer Erith Bexley South East London | Sybiltec" />
+        <meta property="og:title" content="Blog Page 2 | Web Designer Erith Bexley South East London" />
         <meta property="og:description" content="Sybiltec provides website development and e-commerce services for SMEs. Read my blog posts to learn about the latest industry news and company updates." />
-        <meta property="og:url" content="https://sybiltec.com/blog" />
+        <meta property="og:url" content="https://sybiltec.com/blog-2" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -77,71 +77,61 @@
         </div>
         <div class="hero center">
             <div class="container-1140">
-                <h1>Sybiltec's Blog</h1>
+                <h1>Sybiltec's Blog Page 2</h1>
                 <h2>Keeping You Updated</h2>
             </div>
         </div>
         <div class="main section">
             <div class="container-1140">
-                <h2>How to Improve the SEO of Your Website</h2>
-                    <p>One of the most effective ways to increase traffic to your website is through search, so after you've launched your website, the next step is to work on the SEO (search engine optimisation) of your site, helping it to rank in the highest possible position in search engine results pages (SERPs). …</p>
+                    <h2>A Guide to Updating Your WordPress Website</h2>
+                    <p>If you own a WordPress website, you need to be aware that the work doesn't end once your site has been launched. A WordPress website needs to be carefully maintained in order to keep it functioning well, ensuring that you benefit from the latest features and security updates. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/improve-website-seo">Improve My SEO</a>
+                    <a class="btn-primary" href="https://sybiltec.com/guide-to-updating-your-wordpress-website">Update WordPress</a>
                 <div class="padding-top">
-                    <h2>How to Backup Your WordPress Website with UpdraftPlus</h2>
-                    <p>Ask yourself a question: when was the last time you backed up your WordPress website? Hopefully the answer is not "three years ago", or worse still, "never"! Imagine spending weeks or months on building your website, only to lose all the results of your hard work forever 😭 …</p>
+                    <h2>Are You Inadvertently Abusing Your Customers' Data?</h2>
+                    <p>Have you stopped to think about how you are using your customers' data? If not, then you probably don't have a privacy notice - a crucial document for creating a compliant and trustworthy website. In this blog article, we present to you a few areas to consider when creating your privacy notice. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/backup-wordpress-website-using-updraftplus">Backup Your Website</a>
+                    <a class="btn-primary" href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data">Read More</a>
                 </div>
                 <div class="padding-top">
-                    <h2>Bexley Talking Business</h2>
-                    <p>Are you an SME or sole trader based in Bexley? Do you need help with running your business? If so, you may be eligible for free business support. Register now for the programme …</p>
+                    <h2>The Importance of Contact Information on Your Website</h2>
+                    <p>Our recent LinkedIn poll found that allowing your customers to easily contact you via your website is the most important factor when creating a trustworthy website. Read on to find out why, and our advice on how to make your contact information more visible on your website. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/bexley-talking-business">Get Business Support</a>
+                    <a class="btn-primary" href="https://sybiltec.com/importance-of-contact-information-on-your-website">Read More</a>
                 </div>
                 <div class="padding-top">
-                    <h2>10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)</h2>
-                    <p>A fast loading WordPress site is essential for good user experience and SEO. In this blog post we discuss 10 steps you can take to maximise your site's speed. …</p>
+                    <h2>How Does a Good Website Showcase Trust?</h2>
+                    <p>According to our recent LinkedIn poll, 95% of respondents indicated that "good websites showcase trust." But what exactly constitutes a trustworthy website? In this blog post, we examine six key factors you need to consider when developing a well-designed and compliant website. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/fix-slow-wordpress-website">Fix My Site!</a>
+                    <a class="btn-primary" class="btn-primary" href="https://sybiltec.com/how-does-a-good-website-showcase-trust">Read More</a>
                 </div>
                 <div class="padding-top">
-                    <h2>How to Install GA4 on Your WordPress Website</h2>
-                    <p>Ensure that your WordPress website is not password-protected or in maintenance mode before proceeding. …</p>
+                    <h2>Cyber Security Best Practices for You and Your Business</h2>
+                    <p>Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips in this blog. By following good cyber security practices, you can enjoy a safe and secure experience both online and offline. Click on any image a to view a larger version. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/install-ga4-wordpress-website">Read More</a>
+                    <a class="btn-primary" class="btn-primary" href="https://sybiltec.com/cyber-security-best-practices-for-business">Read More</a>
                 </div>
                 <div class="padding-top">
-                    <h2>How to Install GA4 on Your Wix Website</h2>
-                    <p>Your website must be on a Wix Premium Plan in order to connect Google Analytics to it. …</p>
-                    <br>
-                    <a class="btn-primary" href="https://sybiltec.com/install-ga4-wix-website">Read More</a>
+                    <h2>7 Reasons Why You Should be Using Shopify</h2>
+                    <p>Are you planning to sell your products or services online? Consider choosing 
+                        <a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
+                            Shopify</a>, one of the most popular e-commerce platforms. Here I present to you a few of the benefits you can enjoy. Customisable Themes Coding and design skills are not necessary to make your store look unique and fabulous! Shopify offers a selection of …</p>
+                        <br>
+                        <a class="btn-primary" href="https://sybiltec.com/6-reasons-to-use-shopify">Read More</a>
                 </div>
                 <div class="padding-top">
-                    <h2>How to Install GA4 on Your Shopify Website</h2>
-                    <p>You must remove password protection from your Shopify store in order to allow Google Analytics to track events. …</p>
-                    <br>
-                    <a class="btn-primary" href="https://sybiltec.com/install-ga4-shopify-website">Read More</a>
+                    <h2>5 Best Tools for Remote Working</h2>
+                    <p>With an overwhelming amount of tools available today, it can be a difficult task finding the best ones, especially if you are unfamiliar with working from home. Here I present to you a summary of my 5 favourite tools for remote working, all of which are available for free. Of course, I can't go into …</p>
+                        <br>
+                        <a class="btn-primary" href="https://sybiltec.com/5-best-tools-for-remote-working">Read More</a>
                 </div>
-                <div class="padding-top">
-                    <h2>How Do I Upgrade to Google Analytics 4?</h2>
-                    <p>If you are using Google Analytics, you may be aware that there is a new version of Analytics called GA4. The current version, which is Universal Analytics, will stop processing new data on 1st July 2023, so you need to upgrade to GA4 before this date. Not sure which version of Google …</p>
-                    <br>
-                    <a class="btn-primary" href="https://sybiltec.com/upgrade-google-analytics-4">Upgrade GA Now</a>
+                <div class="padding-top padding-bottom">
+                    <h2>6 Tips for Surviving Remote Working</h2>
+                    <p>Love it or loathe it, working remotely may not be for everyone but due to the current pandemic it's essential that work is carried out from home where possible. Read on to find out how you can WFH (work from home) more effectively. Optimise Your Technology Get a reliable internet connection. If possible, use an …</p>
+                        <br>
+                        <a class="btn-primary" href="https://sybiltec.com/6-tips-for-surviving-remote-working">Read More</a>
                 </div>
-                <div class="padding-top">
-                    <h2>Shopify vs WooCommerce: What Are the Differences?</h2>
-                    <p>If you are planning to sell your products or services online, it can be a difficult task choosing the best platform for your business. In this blog article, I explain the differences, pros and cons of the world's two most popular e-commerce store builders: Shopify and WooCommerce. …</p>
-                    <br>
-                <a class="btn-primary" href="https://sybiltec.com/shopify-woocommerce">Read More</a>
-                </div>
-                <div class="padding-top">
-                    <h2>The Web Design Process Explained in 12 Easy Steps</h2>
-                    <p>Thank you so much for considering designing a website with me - you've certainly made the right choice! If you're wondering what the web design process is like, I've outlined the steps in this article to help you understand what is involved and help you decide if you're ready to start a project. …</p>
-                    <br>
-                    <a class="btn-primary" href="https://sybiltec.com/web-design-process-explained-12-easy-steps">Read More</a>
-                </div>
-                <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog-2">Page 2</a></div>
+                <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog">Page 1</a></div>
             </div>
         </div>
         <div class="contact section">
