--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home | Web Designer Erith Bexley South East London | Sybiltec</title>       
+        <title>Web Design for Small Businesses | South East London | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard of Sybiltec provides web design and development services for small businesses. Shopify, WordPress and Wix. Contact me for a free consultation.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Home | Web Designer Erith Bexley South East London | Sybiltec" />
+        <meta property="og:title" content="Web Design for Small Businesses | South East London | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard of Sybiltec provides web design and development services for small businesses. Shopify, WordPress and Wix. Contact me for a free consultation." />
         <meta property="og:url" content="https://sybiltec.com/" />
         <meta property="og:site_name" content="Sybiltec" />
@@ -79,8 +79,8 @@
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h1>Web design and development services</h1>
-                        <h2  class="padding-bottom" style="color: #ffffff; font-size: 18px">A freelance web designer supporting small businesses in South East London</h2>
+                        <h1>Affordable web design for small businesses</h1>
+                        <h2  class="padding-bottom" style="color: #ffffff; font-size: 18px">A freelance web designer supporting SMEs in South East London</h2>
                         <a class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a>
                     </div>
                     <div class="col-4">
