--- a/website-design.html
+++ b/website-design.html
@@ -86,12 +86,19 @@
                 <h2>The Service</h2>
                 <p>Are you looking for a <strong>web designer</strong> in <strong>Bexley</strong> or the surrounding areas? If so, then you've come to the right place! Your website may be in need of a refresh. Or, perhaps you have little or no online presence and you want to build your first website. Either way, my website design service would be perfect for you.</p>
 
+                <h3>Benefits of My Web Design Service</h3>
+                <ul>
+                    <li>Your website's design will be unique - it won't look like the many other websites that exist on the internet</li>
+                    <li>You won't pay the extortionate fees that agencies charge</li>
+                    <li>I'll communicate with you regularly to keep you updated on my progress</li>
+                </ul>
+
                 <h2>The Process</h2>
-                <p>Your requirements will be gathered and we will work together to create a design for your new website. It helps if you have an idea of the colours, fonts, look and feel of the site and content, but if not, don't worry! I will take you through the process of creating suitable designs that reflect your business's values. I will present the website designs to you either via a Figma link, or I will send you the JPEG images attached to an email. Once you are happy with the designs, I will proceed to the next step of building your website on your chosen platform (Wix, WordPress or Shopify). For more information about the web design process, please refer to my blog, <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps">The Web Design Process Explained in 12 Easy Steps</a>.</p>
+                <p>Your requirements will be gathered and we will work together to create a design for your new website. It helps if you have an idea of the colours, fonts, look and feel of the site and content, but if not, don't worry! I will take you through the process of creating suitable designs that reflect your business's values. I will present the website designs to you either via a Figma link, or I will send you the JPEG images attached to an email. Once you are happy with the designs, I will proceed to the next step of building your website on your chosen platform (Wix, WordPress or Shopify). For more information about the web design process, please refer to my blog post, <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps">The Web Design Process Explained in 12 Easy Steps</a>.</p>
 
                 <p>Take a look at the examples below of websites I have designed for past clients.</p>
 
-                <h2 class="padding-top">Web Design Clients</h2>
+                <h2>Web Design Clients</h2>
 
                 <div id="new-haw-community-centre" class="shadow-box-2">                         
                     <div class="row-2">
@@ -268,6 +275,11 @@
                             </div>
                         </div>
                     </div>
+                </div>
+
+                <div class="padding-bottom">
+                    <h2>Why You Need a Website</h2>
+                    <div class="videoWrapper"><iframe width="560" height="315" src="https://www.youtube.com/embed/DY-LbcK8Pf4?si=4LhzHk2A6KqWVqJw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
                 </div>
 
             </div>
